# thegoodshop

./: .envrc  Cargo.toml  README.md  build.rs  flake.nix
migrations/: 20250318163726_Initial_Migration.sql
priv/scripts/: 2025-03-18-scaffold-frontend.sh
src/: db.rs  lib.rs  main.rs  model.rs
thegoodshop/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.js
thegoodshop/components/: CartIcon.tsx
thegoodshop/layouts/: LayoutDefault.tsx
thegoodshop/pages/: +Head.tsx  +config.ts  PageLayout.tsx  _default.page.client.tsx  index.page.server.ts  index.page.tsx
thegoodshop/pages/checkout/: +Page.tsx
thegoodshop/pages/checkout-cancel/: +Page.tsx
thegoodshop/pages/checkout-success/: +Page.tsx
thegoodshop/pages/index/: +Page.tsx  +onBeforeRender.ts
thegoodshop/renderer/: +onRenderClient.tsx  +onRenderHtml.tsx  layout.css
thegoodshop/src/contexts/: CartContext.tsx
thegoodshop/src/types/: generated.ts
